[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynasto"
version = "0.1.0"
description = "Reinforcement learning and testing environment setup"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "cloudpickle==3.0.0",
  "ambiegen==0.0.5",
  "matplotlib==3.9.2",
  "networkx==3.2.1",
  "numba==0.60.0",
  "numpy==1.23.2",
  "pandas==2.2.3",
  "pillow==11.0.0",
  "psutil==6.0.0",
  "rl-agents @ git+https://github.com/eleurent/rl-agents@84df15ea977271e6a4d015f10f9f355f7e866890",
  "scikit-learn==1.5.2",
  "rtamt==0.3.5",
  "scipy==1.11.3",
  "Shimmy==1.3.0",
  "tqdm==4.66.1",
  "opencv-python==4.10.0.84",
  "leidenalg==0.10.2",
  "Levenshtein==0.27.3",
  "imageio==2.35.1",
  "imageio-ffmpeg==0.5.1",
  "igraph==0.11.9",
  "pillow==11.0.0",
  "pygame==2.6.1",
  "pyglet==1.5.0",
  "PyVirtualDisplay==3.0",
  "seaborn==0.13.2",
  "tensorboard==2.13.0",
  "tensorboardX==2.6.2.2",
  "sympy==1.13.1",
  "ipython==8.18.1",
  "tyro==1.0.8",
  "stable_baselines3==2.4.0",
  "highway-env==1.10.2",
  "moviepy >=1.0.0",
  "gymnasium==1.0.0"
]


[tool.setuptools]
include-package-data = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter / often relaxed)
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

exclude = [
    "pyproject.toml",
]